fix: text contrast (#136)
* added contrast detection for GitHubShowcase
* increment version

--- a/src/components/GitHubShowcase/GitHubShowcase.module.css
+++ b/src/components/GitHubShowcase/GitHubShowcase.module.css
@@ -51,7 +51,6 @@
   height: 1.1rem;
   padding: 3px 9px;
   border-radius: 7px;
-  color: rgba(253, 249, 242, 0.9);
 }
 
 .top {
